Wrap contact details correctly
Make them each into inline blocks so they wrap as a complete thing, not on word breaks.

--- a/app/assets/stylesheets/organizations.css.scss
+++ b/app/assets/stylesheets/organizations.css.scss
@@ -32,7 +32,7 @@ div.organization-summary div.organization-description {
   min-height: auto;
 }
 
-span.contact-detail {
+div.contact-detail {
   margin-right: 20px;
-  white-space: nowrap;
+  display: inline-block;
 }
